--- a/sip/CMakeLists.txt
+++ b/sip/CMakeLists.txt
@@ -13,7 +13,7 @@ ExternalProject_Add(sip-4.19.15
     URL_MD5 4a1a4760cfabef15d68f45a6920974c2
     INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
     CONFIGURE_COMMAND
-        ${PYTHON_EXECUTABLE} configure.py -d <INSTALL_DIR>/lib/site-packages -e <INSTALL_DIR>/include -b <INSTALL_DIR>/bin --no-dist-info DEFINES+=ROS_BUILD_SHARED_LIBS "CFLAGS=-nologo -Zm200 -FS -Zc:strictStrings"
+        ${PYTHON_EXECUTABLE} configure.py -d <INSTALL_DIR>/lib/site-packages -e <INSTALL_DIR>/include -b <INSTALL_DIR>/bin --no-dist-info DEFINES+=ROS_BUILD_SHARED_LIBS "CFLAGS=-nologo -Zm200 -FS -Zc:strictStrings" "CXXFLAGS=-nologo -Zm200 -FS -Zc:strictStrings"
     BUILD_COMMAND nmake
     BUILD_IN_SOURCE 1
     INSTALL_COMMAND nmake install
